--- a/ansible/roles/yocto_builder/templates/env.j2
+++ b/ansible/roles/yocto_builder/templates/env.j2
@@ -2,7 +2,7 @@
 DATABASE_URL="postgresql://{{ postgresql_user }}:{{ postgresql_password }}@{{ postgresql_host }}:{{ postgresql_port }}/{{ postgresql_db }}"
 
 # NextAuth
-NEXTAUTH_URL="https://{{ nginx_server_name }}"
+NEXTAUTH_URL="{{ nextauth_url | default('https://' + nginx_server_name) }}"
 NEXTAUTH_SECRET="{{ nextauth_secret }}"
 
 # GitHub OAuth
