--- a/ansible/roles/yocto_builder/templates/env.j2
+++ b/ansible/roles/yocto_builder/templates/env.j2
@@ -2,16 +2,16 @@
 DATABASE_URL="postgresql://{{ postgresql_user }}:{{ postgresql_password }}@{{ postgresql_host }}:{{ postgresql_port }}/{{ postgresql_db }}"
 
 # NextAuth
-NEXTAUTH_URL="{{ nextauth_url | default('https://' + nginx_server_name) }}"
-NEXTAUTH_SECRET="{{ nextauth_secret }}"
+NEXTAUTH_URL="{{ nextauth_url | default('http://localhost:3000') }}"
+NEXTAUTH_SECRET="{{ nextauth_secret | default('changeme-secret-key-change-in-production') }}"
 
-# GitHub OAuth
-GITHUB_CLIENT_ID="{{ github_client_id }}"
-GITHUB_CLIENT_SECRET="{{ github_client_secret }}"
+# GitHub OAuth (optional - can be empty)
+GITHUB_CLIENT_ID="{{ github_client_id | default('') }}"
+GITHUB_CLIENT_SECRET="{{ github_client_secret | default('') }}"
 
-# Google OAuth
-GOOGLE_CLIENT_ID="{{ google_client_id }}"
-GOOGLE_CLIENT_SECRET="{{ google_client_secret }}"
+# Google OAuth (optional - can be empty)
+GOOGLE_CLIENT_ID="{{ google_client_id | default('') }}"
+GOOGLE_CLIENT_SECRET="{{ google_client_secret | default('') }}"
 
 # Application
 BUILDS_DIRECTORY="{{ builds_directory }}"
