Fixed ansible deplyoment.

--- a/ansible/roles/yocto_builder/templates/env.j2
+++ b/ansible/roles/yocto_builder/templates/env.j2
@@ -1,5 +1,5 @@
 # Database
-DATABASE_URL="postgresql://{{ postgresql_user }}:{{ postgresql_password }}@{{ postgresql_host }}:{{ postgresql_port }}/{{ postgresql_db }}"
+DATABASE_URL="{{ database_url }}"
 
 # NextAuth
 NEXTAUTH_URL="{{ nextauth_url | default('http://localhost:3000') }}"
